--- a/UserSyncingApp/Properties/launchSettings.json
+++ b/UserSyncingApp/Properties/launchSettings.json
@@ -1,6 +1,6 @@
 {
   "profiles": {
-    "MyApp": {
+    "UserSyncingApp": {
       "commandName": "Project",
       "launchBrowser": true,
       "environmentVariables": {
