--- a/UserSyncingApp/UserSyncingApp.csproj
+++ b/UserSyncingApp/UserSyncingApp.csproj
@@ -28,6 +28,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\UserSyncingApp.Data\UserSyncingApp.Data.csproj" />
     <ProjectReference Include="..\UserSyncingApp.ServiceInterface\UserSyncingApp.ServiceInterface.csproj" />
     <ProjectReference Include="..\UserSyncingApp.ServiceModel\UserSyncingApp.ServiceModel.csproj" />
   </ItemGroup>
