--- a/UserSyncingApp.ServiceInterface/UserSyncingApp.ServiceInterface.csproj
+++ b/UserSyncingApp.ServiceInterface/UserSyncingApp.ServiceInterface.csproj
@@ -6,6 +6,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="EFCore.BulkExtensions" Version="8.0.3" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
     <PackageReference Include="ServiceStack" Version="8.*" />
   </ItemGroup>
