refactor db context, add appsettings.json, update DI
add user service tests and adjust user service

--- a/UserSyncingApp.Tests/UserSyncingApp.Tests.csproj
+++ b/UserSyncingApp.Tests/UserSyncingApp.Tests.csproj
@@ -9,6 +9,9 @@
   <ItemGroup>
     <ProjectReference Include="..\UserSyncingApp.ServiceInterface\UserSyncingApp.ServiceInterface.csproj" />
     <ProjectReference Include="..\UserSyncingApp.ServiceModel\UserSyncingApp.ServiceModel.csproj" />
+    <PackageReference Include="FluentAssertions" Version="6.12.0" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="8.0.5" />
+    <PackageReference Include="NSubstitute" Version="5.1.0" />
 
     <PackageReference Include="NUnit" Version="3.13.*" />
     <PackageReference Include="NUnit3TestAdapter" Version="4.1.*" />
