Update configs, added design time factory, added service stack service and corresponding DTOs that implement user service

--- a/UserSyncingApp.ServiceModel/UserSyncingApp.ServiceModel.csproj
+++ b/UserSyncingApp.ServiceModel/UserSyncingApp.ServiceModel.csproj
@@ -5,6 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="ServiceStack" Version="8.2.2" />
     <PackageReference Include="ServiceStack.Interfaces" Version="8.*" />
   </ItemGroup>
 
