--- a/UserSyncingApp/appsettings.json
+++ b/UserSyncingApp/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=users.db"
+    "DefaultConnection": "Data Source=../UserSyncingApp.Data/users.db"
   },
   "UserDataEndpoint": "https://jsonplaceholder.typicode.com/users",
   "Logging": {
