Split test projects into logical parts, added tests for UserSyncService

--- a/UserSyncingApp.ServiceStackServices.Tests/UserSyncingApp.ServiceStackServices.Tests.csproj
+++ b/UserSyncingApp.ServiceStackServices.Tests/UserSyncingApp.ServiceStackServices.Tests.csproj
@@ -27,4 +27,8 @@
       <ProjectReference Include="..\UserSyncingApp.ServiceStackServices\UserSyncingApp.ServiceStackServices.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Folder Include="obj\Debug\net8.0\" />
+    </ItemGroup>
+
 </Project>
