--- a/UserSyncingApp.Data/UserSyncingApp.Data.csproj
+++ b/UserSyncingApp.Data/UserSyncingApp.Data.csproj
@@ -23,4 +23,16 @@
       <Folder Include="obj\Debug\net8.0\" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Compile Remove="obj\**" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <EmbeddedResource Remove="obj\**" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <None Remove="obj\**" />
+    </ItemGroup>
+
 </Project>
