--- a/UserSyncingApp.ServiceStackServices.Tests/UserSyncingApp.ServiceStackServices.Tests.csproj
+++ b/UserSyncingApp.ServiceStackServices.Tests/UserSyncingApp.ServiceStackServices.Tests.csproj
@@ -31,4 +31,16 @@
       <Folder Include="obj\Debug\net8.0\" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Compile Remove="obj\**" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <EmbeddedResource Remove="obj\**" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <None Remove="obj\**" />
+    </ItemGroup>
+
 </Project>
